--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
+  <head>
+    <style>
+      body {
+        background-color: white;
+      }
+    </style>
+  </head>
   <body>
      <h1>subdomain takeover</h1>
   </body>
